--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <div id="app"><!--app-html--></div>
-  <script type="module" src='/src/entry-client.tsx'></script>
+  <div id="root"></div>
+  <script type="module" src='/src/index.tsx'></script>
 </body>
 
 </html>
