--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="My Awesome App description" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#FFFFFF" />
+		<meta name="theme-color" content="#ffffff" />
+		<title>Курсач</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="My Awesome App description">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#FFFFFF">
-  <meta name="theme-color" content="#ffffff">
-  <title>Курсач</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src='/src/index.tsx'></script>
-</body>
-
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/index.tsx"></script>
+	</body>
 </html>
